refactor: minor cleanups across controllers and BookSearchService
Small idiomatic improvements in touched code: method reference instead of
wrapping lambda, inline return removing unnecessary local variable, and
standard library calls replacing manual patterns.

- AdminController: use method reference for getCircuitStatus, shorten reset message
- BookController: inline Mono return instead of assigning to local variable
- BookSearchService: use Objects::nonNull method reference, use Math.clamp (Java 21)
  instead of manual Math.max/Math.min chain